# string-calculator-python

./: README.md  calc.py  pyproject.toml  test_calc.py
